# gl-start

./: .gitignore  CMakeLists.txt  gl_core.cpp  gl_core.h  gl_demo1.cpp  gl_demo2.cpp  gl_demo3.cpp  gl_demo4.cpp  gl_demo5.cpp  gl_demo6.cpp  gl_demo7.cpp  gl_demo8.cpp  gl_demo9.cpp  main.cpp  screenshot.c  screenshot.h  shader.cpp  shader.h  texture.cpp  texture2.cpp  util.cc  util.h
res/: fs.glsl  fs_inout.glsl  fs_texture.glsl  fs_uniform.glsl  vs.glsl  vs_color.glsl  vs_uniform.glsl
